---------------------------------------------------------------------------------------------------
Version: 2.5.0
Date: ????
  Features:
    - Added required fluid to resource tooltip
    - Added fluid temperature support
      - When searching, temperatures and temperature ranges for each fluid will be shown as well
      - Each temperature and temperature range has a separate fluid page listing the properties specific to that temperature or range
      - Each fluid still has a non-temperature page that shows all properties for that fluid
    - Added default recipe category excludes for Creative Mod and the PySuite
  Changes:
    - Adjusted titlebar styling to match the base game
    - Improved interaction help formatting
    - Put the settings gear icon on a diet
    - Recipes and materials that are available at the beginning of the game are now treated as such
    - Separated fluid and item search categories
    - Significantly refactored the data processor to improve code quality, simplify some things, and support fluid temperatures
  Bugfixes:
    - Fixed a crash with certain modded burner entities
    - Fixed a long-standing bug that materials would be marked as available when usable as an ingredient, even if it was not obtainable
    - Fixed that even if a page was already open, it would be added again to the session history and re-opened
    - Fixed that hand-minable resource items would be marked as unavailable if no available recipes produced it
    - Fixed the session history active line not lining up with the other lines
---------------------------------------------------------------------------------------------------
Version: 2.4.1
Date: 2021-01-02
  Features:
    - Added compatibility with Factory Planner's dimmer frame - RB will now stay in front of it if both GUIs are open at once
  Bugfixes:
    - Fixed RB GUI not coming to the front when opened