@@ -6,6 +6,10 @@ RecipeBook=Search for information about materials and recipes in a clean, easy-t
 
 [controls]
 rb-toggle-gui=Toggle Recipe Book
+rb-navigate-backward=Navigate backward
+rb-navigate-forward=Navigate forward
+rb-return-to-home=Return to home
+rb-jump-to-front=Jump to front
 
 [shortcut-name]
 rb-toggle-gui=Recipe Book
