@@ -2,7 +2,26 @@ data:extend{
   {
     type = "custom-input",
     name = "rb-toggle-gui",
-    key_sequence = "CONTROL + B",
-    action = "lua"
+    key_sequence = "CONTROL + B"
+  },
+  {
+    type = "custom-input",
+    name = "rb-navigate-backward",
+    key_sequence = "mouse-button-4"
+  },
+  {
+    type = "custom-input",
+    name = "rb-navigate-forward",
+    key_sequence = "mouse-button-5"
+  },
+  {
+    type = "custom-input",
+    name = "rb-return-to-home",
+    key_sequence = "SHIFT + mouse-button-4"
+  },
+  {
+    type = "custom-input",
+    name = "rb-jump-to-front",
+    key_sequence = "SHIFT + mouse-button-5"
   }
 }
